// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the checkbox component should tick it 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-1,
[data-css-1] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-2,
[data-css-2] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-5,
[data-css-5] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-7,
[data-css-7] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-8,
[data-css-8] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-2=""
  data-css-3=""
>
  <div
    data-css-3=""
  >
    <div
      data-css-0=""
      data-css-1=""
      data-css-4=""
    >
      <div
        data-css-6=""
        data-css-5=""
      >
        <input
          checked={false}
          id="a"
          name="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-6=""
      data-css-7=""
    >
      <div
        data-css-8=""
        data-css-6=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should tick it 2`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-1,
[data-css-1] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-6,
[data-css-6] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-7,
[data-css-7] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-8,
[data-css-8] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  background-color: #3598db;
  border-width: 3px;
  border-style: solid;
  border-color: #3598db;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-9,
[data-css-9] {
  position: relative;
  bottom: 1px;
}

<div
  data-css-1=""
  data-css-2=""
>
  <div
    data-css-2=""
  >
    <div
      data-css-0=""
      data-css-3=""
      data-css-8=""
    >
      <div
        data-css-9=""
        data-css-5=""
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          data-css-5=""
          size={14}
          style={
            Object {
              "fill": "#fff",
              "height": 14,
              "stroke": false,
              "width": 14,
            }
          }
        />
      </div>
      <div
        data-css-5=""
        data-css-4=""
      >
        <input
          checked={true}
          id="a"
          name="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={true}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-5=""
      data-css-6=""
    >
      <div
        data-css-7=""
        data-css-5=""
      >
        I am a nice checkbox!
      </div>
    </div>
  </label>
</div>
`;

exports[`Test the checkbox component should work with children 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-1,
[data-css-1] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-5,
[data-css-5] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-6,
[data-css-6] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-7,
[data-css-7] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-8,
[data-css-8] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: darkMarco;
}

<div
  data-css-2=""
  data-css-8=""
>
  <div
    data-css-2=""
  >
    <div
      data-css-0=""
      data-css-1=""
      data-css-3=""
    >
      <div
        data-css-5=""
        data-css-4=""
      >
        <input
          checked={false}
          id="a"
          name="a"
          onChange={[Function]}
          style={
            Object {
              "height": "25px",
              "margin": 0,
              "opacity": 0,
              "width": "25px",
            }
          }
          type="checkbox"
          value={false}
        />
      </div>
    </div>
  </div>
  <label
    htmlFor="a"
  >
    <div
      data-css-5=""
      data-css-6=""
    >
      <div
        data-css-7=""
        data-css-5=""
      >
        <h1>
          test
        </h1>
      </div>
    </div>
  </label>
</div>
`;
